--- a/css/styles.css
+++ b/css/styles.css
@@ -612,13 +612,20 @@ margin-left: 16px;
 /* Modal*/
 
 .modal {
-position: relative;
+position: absolute;
 padding: 24px;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%) scale(1);
     width: 408px;
     min-height: 584px;
 border-radius: 4px;
     background-color: #FCFCFC;
     padding-top: 72px;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14),
+        0px 1px 3px rgba(0, 0, 0, 0.12),
+        0px 2px 1px rgba(0, 0, 0, 0.2);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 
@@ -636,7 +643,7 @@ border-radius: 4px;
     
     background-color: rgba(46, 47, 66, 0.40);
 
-    transition: opacity 250ms ease-in, visibility 250ms ease-in;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 opacity: 0;
     visibility: hidden;
@@ -667,6 +674,9 @@ opacity: 0;
     
     width: 24px;
     height: 24px;
+
+    padding: 0;
+    cursor: pointer;
     
     color: #2E2F42;
     border-radius: 50%;
@@ -675,10 +685,32 @@ opacity: 0;
         color: #2e2f42;
 
     border: 1px solid rgba(0, 0, 0, 0.1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
     
 }
 
+.modal-btn:hover {
+    background-color: #404bbf;
+    border: none;
+}
+
+.modal-btn:focus {
+    background-color: #404bbf;
+    border: none;
+}
+
+.modal-btn-icon {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-btn-icon:hover {
+    fill: #ffffff;
+}
+
+.modal-btn-icon:focus {
+    fill: #ffffff;
+}
 
 
 .modal-text {
