--- a/css/styles.css
+++ b/css/styles.css
@@ -704,12 +704,14 @@ opacity: 0;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-btn-icon:hover {
-    fill: #ffffff;
+.modal-btn:hover,
+.modal-btn:focus+.modal-btn-icon {
+    fill: #FFFFFF;
 }
 
-.modal-btn-icon:focus {
-    fill: #ffffff;
+.modal-btn:focus,
+.modal-btn:hover+.modal-btn-icon {
+    fill: #FFFFFF;
 }
 
 
