--- a/css/styles.css
+++ b/css/styles.css
@@ -749,9 +749,9 @@ opacity: 0;
         font-size: 12px;
         
        
-        line-height: 14px;
-        /* 116.667% */
-        letter-spacing: 0.02em;
+        ine-height: 1.17;
+        letter-spacing: 0.04em;
+        margin-bottom: 4px;
 }
 
 .form-field {
@@ -763,8 +763,11 @@ opacity: 0;
    width: 100%;
    padding-left: 38px;
     height: 40px;
-        border: 1px solid var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
+        border: 1px solid rgba(46, 47, 66, 0.40);
 outline: none;
+background-color: transparent;
+outline: transparent;
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     }
 
