--- a/css/styles.css
+++ b/css/styles.css
@@ -740,18 +740,13 @@ opacity: 0;
 }
 
 .form-lable {
-    display: block;
-    margin-bottom: 8px;
-    color: #8E8F99;
-    
-        
-       
-        font-size: 12px;
-        
-       
-        ine-height: 1.17;
-        letter-spacing: 0.04em;
-        margin-bottom: 4px;
+display: block;
+margin-bottom: 8px;
+color: #8E8F99;
+font-size: 12px;
+line-height: 1.17;
+letter-spacing: 0.04em;
+margin-bottom: 4px;
 }
 
 .form-field {
@@ -806,14 +801,20 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 padding: 8px 16px;
 outline: none;
 
-    
+    color: rgba(46, 47, 66, 0.4);
+    line-height: 1.17;
     
     font-size: 12px;
     
    
-    line-height: 1.16;
+    line-height: 1.17;
    
     letter-spacing: 0.04em;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    background-color: transparent;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 
@@ -833,6 +834,10 @@ color: rgba(46, 47, 66, 0.40);
     border-color: #4D5AE5;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+}
+
+.form-text-input {
+    margin-bottom: 16px
 }
 
 /* custom checkbox */
