--- a/css/styles.css
+++ b/css/styles.css
@@ -837,7 +837,8 @@ color: rgba(46, 47, 66, 0.40);
 }
 
 .form-text-input {
-    margin-bottom: 16px
+    margin-bottom: 16px;
+    
 }
 
 /* custom checkbox */
