--- a/css/styles.css
+++ b/css/styles.css
@@ -830,18 +830,19 @@ p {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.checkbox:checked+.form-agreement-checkbox {
-    background-color: #404BBF;
+
+.checkbox:checked+.form-agreement>.form-agreement-checkbox {
+    background-color: #404bbf;
     border: none;
+    fill: #F4F4FD;
 }
 
-.checkbox:checked+.form-agreement-checkbox>.form-agreement-icon {
-    opacity: 1;
+.checkbox:focus+.form-agreement>.form-agreement-checkbox {
+    border-color: #4D5AE5;
 }
 
 .form-agreement-icon {
-    opacity: 0;
-    fill: #FFF;
+   fill: #FFFFF;
 }
 
 .form-agreement-link {
