--- a/css/styles.css
+++ b/css/styles.css
@@ -594,13 +594,21 @@ p {
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.04em;
-
     border-radius: 4px;
     padding: 8px 24px;
     background: #4D5AE5;
     color: #FFF;
     outline: none;
     border: none;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.subscribe-form-btn:hover {
+    background: #404BBF;
+}
+
+.subscribe-form-btn:focus {
+    background: #404BBF;
 }
 
 .subscribe-form-icon {
@@ -733,6 +741,7 @@ p {
 
 .form-input {
     border-radius: 4px;
+    font-size: 12px;
     width: 100%;
     padding-left: 38px;
     height: 40px;
@@ -821,6 +830,7 @@ p {
     display: inline-flex;
     align-items: center;
     justify-content: center;
+    margin-right: 8px;
     width: 16px;
     height: 16px;
     cursor: pointer;
